src/test/run-pass/issue-2074.rs
fn main(args: [str]) {
    let one = fn@() -> uint {
        enum r { a };
        ret a as uint;
    };
    let two = fn@() -> uint {
        enum r { a };
        ret a as uint;
    };
    one(); two();
}
